--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - MyWatch_WebAR</title>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <a-scene embedded arjs='detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
        <a-assets> 
          <a-asset-item id="watch1" src="https://raw.githubusercontent.com/Xosten/WebAR_MyWatch/main/Assets/Watch%20Model%2001/scene.gltf"></a-asset-item>
@@ -14,3 +25,6 @@
     <a-entity light="type: directional; color: #FFF; intensity: 5" position="-0.5 1 1"></a-entity>
   
     </a-scene>
+<!-- partial -->
+  
+</body>
